--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="images (1)/image-removebg-preview.png" width="70" height="70"/>
+        <img src="images/image-removebg-preview.png" width="70" height="70"/>
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
     <div class="carousel-inner">
       
       <div class="carousel-item active">
-        <img src="images (1)/Picsart_23-08-30_06-31-35-377.jpg" class="d-block w-100" alt="...">
+        <img src="images/Picsart_23-08-30_06-31-35-377.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Personaje Fair</h5>
           <p>Origen y Storytelling.</p>
@@ -109,11 +109,11 @@
     <div class="row" id="walk">
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 py-5">
         <h1 class="display-4 text-center">Walk</h1>
-        <img class="mx-auto d-block" src="images (1)/walk (1).gif" alt="walk">
+        <img class="mx-auto d-block" src="images/walk (1).gif" alt="walk">
       </div>
       <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 py-5">
         <h1 class="display-4 text-center">360 Turnaround</h1>
-        <img class="mx-auto d-block" src="images (1)/RECOVER_360Per-(1) (1).gif" alt="360 Turnaround">
+        <img class="mx-auto d-block" src="images/RECOVER_360Per-(1) (1).gif" alt="360 Turnaround">
       </div>
     </div>
   </div>
@@ -124,7 +124,7 @@
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/encoger (1).gif" class="card-img-top" alt="photo 1">
+            <img src="images/encoger (1).gif" class="card-img-top" alt="photo 1">
             <div class="card-body">
               <h3 class="card-title">SQUASH & STRETCH</h3>
               <h6>Comprimir y estirar</h6>
@@ -134,7 +134,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/RECOVER_anticipacion.gif" class="card-img-top" alt="photo 2">
+            <img src="images/RECOVER_anticipacion.gif" class="card-img-top" alt="photo 2">
             <div class="card-body">
               <h3 class="card-title">ANTICIPATION</h3>
               <h6>Anticipación</h6>
@@ -144,7 +144,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/timiing.gif" class="card-img-top" alt="photo 2">
+            <img src="images/timiing.gif" class="card-img-top" alt="photo 2">
             <div class="card-body">
               <h3 class="card-title">STAGING</h3>
               <h6>Puesta en escena</h6>
@@ -154,7 +154,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/pose.gif" class="card-img-top" alt="photo 3">
+            <img src="images/pose.gif" class="card-img-top" alt="photo 3">
             <div class="card-body">
               <h3 class="card-title">STRAIGHT AHEAD & POSE TO POSE</h3>
               <h6>Animación hacía adelante O Pose a pose</h6>
@@ -164,7 +164,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/accion.superpuestaa.gif" class="card-img-top" alt="photo 4">
+            <img src="images/accion.superpuestaa.gif" class="card-img-top" alt="photo 4">
             <div class="card-body">
               <h3 class="card-title">FOLLOW THROUGH & OVERLAPPING</h3>
               <h6>Acción continuada y acción superpuesta</h6>
@@ -174,7 +174,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/pose.gif" class="card-img-top" alt="photo 5">
+            <img src="images/pose.gif" class="card-img-top" alt="photo 5">
             <div class="card-body">
               <h3 class="card-title">SLOW IN & SLOW OUT</h3>
               <h6>Acelaraciones y desaleraciones</h6>
@@ -184,7 +184,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/arcos.gif" class="card-img-top" alt="photo 5">
+            <img src="images/arcos.gif" class="card-img-top" alt="photo 5">
             <div class="card-body">
               <h3 class="card-title">ARCS</h3>
               <h6>Acelaraciones</h6>
@@ -194,7 +194,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/accion.secundariaa.gif" class="card-img-top" alt="photo 6">
+            <img src="images/accion.secundariaa.gif" class="card-img-top" alt="photo 6">
             <div class="card-body">
               <h3 class="card-title">SECONDARY ACTION </h3>
               <h6>Acción secuandaria</h6>
@@ -204,7 +204,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/timiing.gif" class="card-img-top" alt="photo 2">
+            <img src="images/timiing.gif" class="card-img-top" alt="photo 2">
             <div class="card-body">
               <h3 class="card-title">TIMING</h3>
               <h6>Sentido del tiempo</h6>
@@ -214,7 +214,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/exageracionn.gif" class="card-img-top" alt="photo 5">
+            <img src="images/exageracionn.gif" class="card-img-top" alt="photo 5">
             <div class="card-body">
               <h3 class="card-title">EXAGGERATION</h3>
               <h6>Exageración</h6>
@@ -224,7 +224,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/timiing.gif"card-body>
+            <img src="images/timiing.gif"card-body>
               <h3 class="card-title">SOLID DRAWINGS</h3>
               <h6>Dibujos o poses firmes</h6>
               <p class="card-text">Signifca tener en cuenta las formas y el espacio trdimensional dandole volumen y peso a nuestros dibujos.</p>
@@ -233,7 +233,7 @@
         </div>
         <div class="col-md-4 mb-4">
           <div class="card h-100">
-            <img src="images (1)/appeal.gif" class="card-img-top" alt="photo 2">
+            <img src="images/appeal.gif" class="card-img-top" alt="photo 2">
             <div class="card-body">
               <h3 class="card-title">APPEAL</h3>
               <h6>Atractivo visual</h6>
